--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luan Pereira Pinheiro</title>
     <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
     <header>
+      <div class="back"></div>
+      <div class="superior">
         <nav class="menu">
           <ul>
             <li><a href="#">Sobre</a></li>
@@ -14,8 +17,18 @@
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
+        <div>
         <h1 class="site-title">Luan Pereira Pinheiro</h1>
         <h2 class="site-subtitle">Estudante de Mecatrônica</h2>
+      </div>
+      </div>
     </header>
+    <section>
+      <h2>Portfólio</h2>
+      <figure>
+        <img class="img-portfolio" src="./IMG/WhatsApp Image 2020-05-12 at 21.23.17.jpeg" alt="Bingo com Arduino">
+        <figcaption>Bingo com Arduino</figcaption>
+      </figure>
+    </section>
 </body>
 </html>
