--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luan Pereira Pinheiro</title>
     <link rel="stylesheet" href="CSS/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Roboto+Slab&family=Satisfy&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,18 +18,24 @@
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
-        <div>
+        <div class="title">
         <h1 class="site-title">Luan Pereira Pinheiro</h1>
         <h2 class="site-subtitle">Estudante de Mecatrônica</h2>
       </div>
       </div>
     </header>
-    <section>
+    <section class="portfolio">
       <h2>Portfólio</h2>
+      <div class="grid">
+      <figure>
+        <img class="img-portfolio" src="./IMG/semaforo.png" alt="Semáforo com Arduino">
+        <figcaption> Semáforo com Arduino (imagem de Flipe-Flope)</figcaption>
+      </figure>
       <figure>
         <img class="img-portfolio" src="./IMG/WhatsApp Image 2020-05-12 at 21.23.17.jpeg" alt="Bingo com Arduino">
         <figcaption>Bingo com Arduino</figcaption>
       </figure>
+    </div>
     </section>
 </body>
 </html>
