--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
     <title>Luan Pereira Pinheiro</title>
     <link rel="stylesheet" href="CSS/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Roboto+Slab&family=Satisfy&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/244039f05f.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
       <div class="back"></div>
       <div class="superior">
         <nav class="menu">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#portfolio">Portfólio</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </nav>
+
         <div class="title">
         <h1 class="site-title">Luan Pereira Pinheiro</h1>
         <h2 class="site-subtitle">Estudante de Mecatrônica</h2>
       </div>
       </div>
     </header>
-    <section class="portfolio">
+
+    <section class="portfolio" id="portfolio">
       <h2>Portfólio</h2>
       <div class="grid">
       <figure>
@@ -37,5 +41,32 @@
       </figure>
     </div>
     </section>
+
+    <section class="contato" id="contato">
+      <h2>Contato</h2>
+      <div class="grid icons">
+        <a target="_blank" href="https://github.com/pinheiro-lu">
+          <i class="fab fa-github"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/luan-pereira-pinheiro-582903193/">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="luanpereira0603@gmail.com">
+          <i class="fas fa-envelope"></i>
+        </a>
+      </div>
+    </section>
+    <div class="spinner"></div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+ <script>
+  //código usando jQuery
+  $(document).ready(function() {
+  $('.spinner').hide();
+  });
+</script>
 </body>
 </html>
